--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue3-carousel": "^0.3.4",
     "vue3-touch-events": "^4.2.0"
   },
   "devDependencies": {
